footer positioned correctly was too high [fix]

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,5 +8,5 @@ body {
 }
 
 footer { 
-  margin-top: 260px;
+  margin-top: 430px;
 }
